force-app/main/default/objects/Mortgage__c/fields/Actual_Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Actual_Payment_Term__c</fullName>
    <description>The period of time over which the interest rate, payment and other mortgage conditions are set. At the end of the term the mortgage is due and payable unless renewed. (Months)</description>
    <inlineHelpText>The period of time over which the interest rate, payment and other mortgage conditions are set. At the end of the term the mortgage is due and payable unless renewed. (Months)</inlineHelpText>
    <label>Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>