force-app/main/default/objects/Mortgage__c/fields/Amortization_Term__c.field-meta.xml
<CustomField>
    <fullName>Amortization_Term__c</fullName>
    <description>The contractual period over which the mortgage amortization is calculated. (Months)</description>
    <inlineHelpText>The contractual period over which the mortgage amortization is calculated. (Months)</inlineHelpText>
    <label>Amortization</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>