force-app/main/default/objects/Mortgage__c/fields/Applicant_Group_Type__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Group_Type__c</fullName>
    <label>Applicant Group Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Applicant</fullName>
            </value>
            <value>
                <fullName>Co Signer</fullName>
            </value>
            <value>
                <fullName>Guarantor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>