force-app/main/default/objects/Mortgage__c/fields/Balance_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Balance_Remaining__c</fullName>
    <description>New Morgtage: - Balance of the mortgage remaining at the end of the mortgage term, based on calculated amortization schedule</description>
    <inlineHelpText>New Morgtage: - Balance of the mortgage remaining at the end of the mortgage term, based on calculated amortization schedule</inlineHelpText>
    <label>Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>