force-app/main/default/objects/Mortgage__c/fields/BuyDown_Rate__c.field-meta.xml
<CustomField>
    <fullName>BuyDown_Rate__c</fullName>
    <inlineHelpText>&quot;Label: Buy-down Rate
Type: Percentage&quot;</inlineHelpText>
    <label>Buy-Down Rate</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>