force-app/main/default/objects/Mortgage__c/fields/Cash_Back_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cash_Back_Amount__c</fullName>
    <inlineHelpText>The cash back amount in dollars.</inlineHelpText>
    <label>Cashback Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>