force-app/main/default/objects/Mortgage__c/fields/Cash_Back_Override__c.field-meta.xml
<CustomField>
    <fullName>Cash_Back_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Yes/No flag indicating if the Cash back Amount or the Cash back Percent was calculated.</inlineHelpText>
    <label>Cash Back Override</label>
    <type>Checkbox</type>
</CustomField>