force-app/main/default/objects/Mortgage__c/fields/Cash_Back_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Cash_Back_Percentage__c</fullName>
    <inlineHelpText>The cash back percentage.</inlineHelpText>
    <label>Cashback Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>