force-app/main/default/objects/Mortgage__c/fields/Commercial__c.field-meta.xml
<CustomField>
    <fullName>Commercial__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Mortgage Classification</inlineHelpText>
    <label>Commercial</label>
    <type>Checkbox</type>
</CustomField>