force-app/main/default/objects/Mortgage__c/fields/Construction__c.field-meta.xml
<CustomField>
    <fullName>Construction__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Mortgage Classification</inlineHelpText>
    <label>Construction</label>
    <type>Checkbox</type>
</CustomField>