force-app/main/default/objects/Mortgage__c/fields/Current_Mortgage_Number__c.field-meta.xml
<CustomField>
    <fullName>Current_Mortgage_Number__c</fullName>
    <description>Current Mortgage Number</description>
    <label>Current Mortgage Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>