force-app/main/default/objects/Mortgage__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <label>Discount Rate</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>