force-app/main/default/objects/Mortgage__c/fields/Effective_Amortization__c.field-meta.xml
<CustomField>
    <fullName>Effective_Amortization__c</fullName>
    <label>Effective Amortization</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>