force-app/main/default/objects/Mortgage__c/fields/Existing_Mortgage__c.field-meta.xml
<CustomField>
    <fullName>Existing_Mortgage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing Mortgage</label>
    <type>Checkbox</type>
</CustomField>