force-app/main/default/objects/Mortgage__c/fields/Existing_Mortgage_Holder__c.field-meta.xml
<CustomField>
    <fullName>Existing_Mortgage_Holder__c</fullName>
    <label>Mortgage Holder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>