force-app/main/default/objects/Mortgage__c/fields/FilogixId__c.field-meta.xml
<CustomField>
    <fullName>FilogixId__c</fullName>
    <description>Filogix Application Id [External]</description>
    <externalId>true</externalId>
    <inlineHelpText>If the field is blank, the app is not synced with Filogix</inlineHelpText>
    <label>Filogix ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>