force-app/main/default/objects/Mortgage__c/fields/First_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Payment_Date__c</fullName>
    <description>Calculated first payment date of new mortgage.</description>
    <inlineHelpText>Calculated first payment date of new mortgage.</inlineHelpText>
    <label>First Payment Date</label>
    <type>Date</type>
</CustomField>