force-app/main/default/objects/Mortgage__c/fields/Heloc__c.field-meta.xml
<CustomField>
    <fullName>Heloc__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Mortgage Classification</inlineHelpText>
    <label>Heloc</label>
    <type>Checkbox</type>
</CustomField>