force-app/main/default/objects/Mortgage__c/fields/Insurance_Adjustment_Date__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Adjustment_Date__c</fullName>
    <inlineHelpText>The date the term of the mortgage starts. An interest-only payment on mortgage funds advanced prior to the IAD will be due on this date.</inlineHelpText>
    <label>Insurance Adjustment Date</label>
    <type>DateTime</type>
</CustomField>