force-app/main/default/objects/Mortgage__c/fields/Interest_Adj_Amount__c.field-meta.xml
<CustomField>
    <fullName>Interest_Adj_Amount__c</fullName>
    <label>Interest Adj. Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>