force-app/main/default/objects/Mortgage__c/fields/Interest_Adj_Date__c.field-meta.xml
<CustomField>
    <fullName>Interest_Adj_Date__c</fullName>
    <label>Interest Adj. Date</label>
    <type>DateTime</type>
</CustomField>