force-app/main/default/objects/Mortgage__c/fields/Interest_Type__c.field-meta.xml
<CustomField>
    <fullName>Interest_Type__c</fullName>
    <inlineHelpText>Indicates the type of interest used on this mortgage, ie. fixed, adjustable, variable.</inlineHelpText>
    <label>Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adjustable</fullName>
            </value>
            <value>
                <fullName>Buydown</fullName>
            </value>
            <value>
                <fullName>Capped Variable</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Variable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>