force-app/main/default/objects/Mortgage__c/fields/Is_Insured__c.field-meta.xml
<CustomField>
    <fullName>Is_Insured__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Flag indicating that mortgage default insurance is required.</inlineHelpText>
    <label>Insured</label>
    <type>Checkbox</type>
</CustomField>