force-app/main/default/objects/Mortgage__c/fields/Is_Interest_Only__c.field-meta.xml
<CustomField>
    <fullName>Is_Interest_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interest Only</label>
    <type>Checkbox</type>
</CustomField>