force-app/main/default/objects/Mortgage__c/fields/Lender_Response_Id__c.field-meta.xml
<CustomField>
    <fullName>Lender_Response_Id__c</fullName>
    <label>Lender Response Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>