force-app/main/default/objects/Mortgage__c/fields/Lender_Submission_Id__c.field-meta.xml
<CustomField>
    <fullName>Lender_Submission_Id__c</fullName>
    <label>Lender Submission Id</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>