force-app/main/default/objects/Mortgage__c/fields/Line_Of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_Of_Business__c</fullName>
    <inlineHelpText>Code that represents the line of business the application was sourced from. ie. A,B,C.</inlineHelpText>
    <label>Line Of Business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>