force-app/main/default/objects/Mortgage__c/fields/Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Loan Application this mortgage is associcated with</description>
    <inlineHelpText>Loan Application this mortgage is associcated with</inlineHelpText>
    <label>Loan Application</label>
    <referenceTo>ResidentialLoanApplication</referenceTo>
    <relationshipLabel>Mortgages</relationshipLabel>
    <relationshipName>Mortgages</relationshipName>
    <type>Lookup</type>
</CustomField>