force-app/main/default/objects/Mortgage__c/fields/Loan_Application_Property__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application_Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Loan Application Property associated with this Mortgage</description>
    <inlineHelpText>Loan Application Property associated with this Mortgage</inlineHelpText>
    <label>Loan Application Property</label>
    <referenceTo>LoanApplicationProperty</referenceTo>
    <relationshipLabel>Mortgages</relationshipLabel>
    <relationshipName>Mortgages</relationshipName>
    <type>Lookup</type>
</CustomField>