force-app/main/default/objects/Mortgage__c/fields/Loan_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Loan_Purpose__c</fullName>
    <label>Loan Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Purchase With Improvements</fullName>
            </value>
            <value>
                <fullName>Refinance</fullName>
            </value>
            <value>
                <fullName>ETO</fullName>
            </value>
            <value>
                <fullName>Switch or Transfer</fullName>
            </value>
            <value>
                <fullName>Port</fullName>
            </value>
            <value>
                <fullName>Deficiency Sale</fullName>
            </value>
            <value>
                <fullName>Workout</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>