force-app/main/default/objects/Mortgage__c/fields/Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>Loan_Type__c</fullName>
    <inlineHelpText>Indicates the type of loan, ie, Mortgage,LOC,MCM.</inlineHelpText>
    <label>Loan Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mortgage</fullName>
            </value>
            <value>
                <fullName>Multiple Component</fullName>
            </value>
            <value>
                <fullName>Secured LOC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>