force-app/main/default/objects/Mortgage__c/fields/LOC_Repayment_Type__c.field-meta.xml
<CustomField>
    <fullName>LOC_Repayment_Type__c</fullName>
    <label>LOC Repayment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10 and 15</fullName>
            </value>
            <value>
                <fullName>5 and 20</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>