force-app/main/default/objects/Mortgage__c/fields/LTV__c.field-meta.xml
<CustomField>
    <fullName>LTV__c</fullName>
    <label>LTV</label>
    <precision>16</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>