force-app/main/default/objects/Mortgage__c/fields/Mailing_Address_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_Indicator__c</fullName>
    <label>Mailing Address Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>