force-app/main/default/objects/Mortgage__c/fields/Market_Submission__c.field-meta.xml
<CustomField>
    <fullName>Market_Submission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Market Submission</label>
    <type>Checkbox</type>
</CustomField>