force-app/main/default/objects/Mortgage__c/fields/Market_Submission_Number__c.field-meta.xml
<CustomField>
    <fullName>Market_Submission_Number__c</fullName>
    <label>Market Submission Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>