force-app/main/default/objects/Mortgage__c/fields/Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Date__c</fullName>
    <description>Date the payment term matures. The last day of the term of the mortgage agreement.</description>
    <inlineHelpText>Date the payment term matures. The last day of the term of the mortgage agreement.</inlineHelpText>
    <label>Maturity Date</label>
    <type>Date</type>
</CustomField>