force-app/main/default/objects/Mortgage__c/fields/MI_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>MI_Reference_Number__c</fullName>
    <label>MI Reference Number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>