force-app/main/default/objects/Mortgage__c/fields/Mortgage_Insurance_Included__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Insurance_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Yes/No flag indicating if the MI Premium is to be financed (capitalized) or paid upfront at closing.</inlineHelpText>
    <label>Insured</label>
    <type>Checkbox</type>
</CustomField>