force-app/main/default/objects/Mortgage__c/fields/Mortgage_Insurer__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Insurer__c</fullName>
    <label>Mortgage Insurer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Canada Guaranty</fullName>
            </value>
            <value>
                <fullName>CMHC</fullName>
            </value>
            <value>
                <fullName>Genworth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>