force-app/main/default/objects/Mortgage__c/fields/Mortgage_Type__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Type__c</fullName>
    <label>Mortgage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First</fullName>
            </value>
            <value>
                <fullName>Second</fullName>
            </value>
            <value>
                <fullName>Third</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>