force-app/main/default/objects/Mortgage__c/fields/MTG_Provider_Id__c.field-meta.xml
<CustomField>
    <fullName>MTG_Provider_Id__c</fullName>
    <label>MTG Provider Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>