force-app/main/default/objects/Mortgage__c/fields/Net_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Loan_Amount__c</fullName>
    <inlineHelpText>Requested loan amount or base loan amount.</inlineHelpText>
    <label>Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>