force-app/main/default/objects/Mortgage__c/fields/Net_Rate__c.field-meta.xml
<CustomField>
    <fullName>Net_Rate__c</fullName>
    <label>Net Rate</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>