force-app/main/default/objects/Mortgage__c/fields/Original_Mortgage_Amount__c.field-meta.xml
<CustomField>
    <fullName>Original_Mortgage_Amount__c</fullName>
    <inlineHelpText>Original mortgage amount if the mortgage is refinance.</inlineHelpText>
    <label>Original Mortgage Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>