force-app/main/default/objects/Mortgage__c/fields/PAndIPaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>PAndIPaymentAmount__c</fullName>
    <label>Principal and Interest Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>