force-app/main/default/objects/Mortgage__c/fields/PAndIPaymentAmount_Monthly__c.field-meta.xml
<CustomField>
    <fullName>PAndIPaymentAmount_Monthly__c</fullName>
    <label>Monthly Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>