force-app/main/default/objects/Mortgage__c/fields/PAndIPaymentAmountQualify__c.field-meta.xml
<CustomField>
    <fullName>PAndIPaymentAmountQualify__c</fullName>
    <label>Monthly Payment (Qualifying)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>