force-app/main/default/objects/Mortgage__c/fields/Payment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Payment_Frequency__c</fullName>
    <inlineHelpText>Indicates frequency when payments are to be made.</inlineHelpText>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accelerated Biweekly</fullName>
            </value>
            <value>
                <fullName>Accelerated Weekly</fullName>
            </value>
            <value>
                <fullName>Biweekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Semi Monthly</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>