force-app/main/default/objects/Mortgage__c/fields/Payoff_Type__c.field-meta.xml
<CustomField>
    <fullName>Payoff_Type__c</fullName>
    <label>Pay Off</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>From Proceeds</fullName>
            </value>
            <value>
                <fullName>Prior to Advance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>