force-app/main/default/objects/Mortgage__c/fields/Premium__c.field-meta.xml
<CustomField>
    <fullName>Premium__c</fullName>
    <label>Premium Rate</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>