force-app/main/default/objects/Mortgage__c/fields/PRIIndexEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>PRIIndexEffectiveDate__c</fullName>
    <label>PRI Index Effective Date</label>
    <type>DateTime</type>
</CustomField>