force-app/main/default/objects/Mortgage__c/fields/Prod_MP_Business_Id__c.field-meta.xml
<CustomField>
    <fullName>Prod_MP_Business_Id__c</fullName>
    <label>Prod MP Business Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>