force-app/main/default/objects/Mortgage__c/fields/Qualify_Amortization_Term__c.field-meta.xml
<CustomField>
    <fullName>Qualify_Amortization_Term__c</fullName>
    <description>The contractual period over which the mortgage amortization is calculated.</description>
    <inlineHelpText>The contractual period over which the mortgage amortization is calculated.</inlineHelpText>
    <label>Amortization (months)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>