force-app/main/default/objects/Mortgage__c/fields/Qualify_Interest_Compound__c.field-meta.xml
<CustomField>
    <fullName>Qualify_Interest_Compound__c</fullName>
    <description>Interest compounding method used to calculate payment.</description>
    <inlineHelpText>Interest compounding method used to calculate payment.</inlineHelpText>
    <label>Compounded Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Semi Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>