force-app/main/default/objects/Mortgage__c/fields/Qualify_Is_Interest_Only__c.field-meta.xml
<CustomField>
    <fullName>Qualify_Is_Interest_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interest Only (Qualifying)</label>
    <type>Checkbox</type>
</CustomField>