force-app/main/default/objects/Mortgage__c/fields/Qualify_Rate__c.field-meta.xml
<CustomField>
    <fullName>Qualify_Rate__c</fullName>
    <description>Interest rate used to qualify the applicants.</description>
    <inlineHelpText>Interest rate used to qualify the applicants.</inlineHelpText>
    <label>Interest Rate (Qualify Rate)</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>