force-app/main/default/objects/Mortgage__c/fields/QualifyingGds__c.field-meta.xml
<CustomField>
    <fullName>QualifyingGds__c</fullName>
    <label>Qualifying GDS</label>
    <precision>16</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>