force-app/main/default/objects/Mortgage__c/fields/QualifyingTds__c.field-meta.xml
<CustomField>
    <fullName>QualifyingTds__c</fullName>
    <label>Qualifying TDS</label>
    <precision>16</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>