force-app/main/default/objects/Mortgage__c/fields/Rate_Guarantee_Length__c.field-meta.xml
<CustomField>
    <fullName>Rate_Guarantee_Length__c</fullName>
    <label>Rate Guarantee Length</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>