force-app/main/default/objects/Mortgage__c/fields/Ref_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Ref_Additional_Information__c</fullName>
    <label>Ref Additional Information</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>