force-app/main/default/objects/Mortgage__c/fields/Ref_Blended_Amortization__c.field-meta.xml
<CustomField>
    <fullName>Ref_Blended_Amortization__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Yes or No flag to indicate a blended amortization in a refinance application.</inlineHelpText>
    <label>Blended Amortization</label>
    <type>Checkbox</type>
</CustomField>