force-app/main/default/objects/Mortgage__c/fields/Repayment_Type__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Type__c</fullName>
    <label>Repayment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>At Maturity</fullName>
            </value>
            <value>
                <fullName>Blended PI</fullName>
            </value>
            <value>
                <fullName>Interest Only Fixed</fullName>
            </value>
            <value>
                <fullName>Interest Only Variable</fullName>
            </value>
            <value>
                <fullName>Interest Plus Fixed Principal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>