force-app/main/default/objects/Mortgage__c/fields/Requested_Rate__c.field-meta.xml
<CustomField>
    <fullName>Requested_Rate__c</fullName>
    <label>Requested Rate</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>