force-app/main/default/objects/Mortgage__c/fields/Reverse_Flag__c.field-meta.xml
<CustomField>
    <fullName>Reverse_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Mortgage Classification</inlineHelpText>
    <label>Reverse</label>
    <type>Checkbox</type>
</CustomField>