force-app/main/default/objects/Mortgage__c/fields/Single_Progressive_Type__c.field-meta.xml
<CustomField>
    <fullName>Single_Progressive_Type__c</fullName>
    <inlineHelpText>Identifies whether the mortgage advance is single or progressive advancements.</inlineHelpText>
    <label>Progress Advance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>