force-app/main/default/objects/Mortgage__c/fields/Source_Mortgage_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_Mortgage_ID__c</fullName>
    <label>Source Mortgage ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>