force-app/main/default/objects/Mortgage__c/fields/Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Date__c</fullName>
    <label>Status Date</label>
    <type>DateTime</type>
</CustomField>