force-app/main/default/objects/Mortgage__c/fields/Sub_Prime__c.field-meta.xml
<CustomField>
    <fullName>Sub_Prime__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Mortgage Classification</inlineHelpText>
    <label>SubPrime</label>
    <type>Checkbox</type>
</CustomField>